# serde_tree_sitter

./: Cargo.toml  LICENSE  README.md
examples/: json.rs
src/: access.rs  deserializer.rs  error.rs  lib.rs  tsnode.rs
src/deserializer/: field.rs  newtype_struct.rs  node.rs
