[package]
name = "serde_tree_sitter"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = "1.0.197"
thiserror = "1.0.58"
tree-sitter = "0.20.10"

[dev-dependencies]
tree-sitter-json = "0.20.2"
serde = {version = "1.0.197", features=["serde_derive"]}
color-backtrace = "0.6.1"
pretty_assertions = "1.4.0"
ctor = "0.2.7"

[[example]]
name = "json"
