[package]
name = "serde_tree_sitter"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"
description="Serde Deserializer for tree-sitter"
repository="https://github.com/todesking/serde_tree_sitter"
documentation="https://docs.rs/serde_tree_sitter"
readme="README.md"

[lib]

[dependencies]
serde = "1.0.197"
thiserror = "1.0.58"
tree-sitter = "0.20.10"

[dev-dependencies]
tree-sitter-json = "0.20.2"
serde = {version = "1.0.197", features=["serde_derive"]}
color-backtrace = "0.6.1"
pretty_assertions = "1.4.0"
ctor = "0.2.7"

[[example]]
name = "json"
